# MyArch

./: CMakeLists.txt  README.md  Resources.qrc  app.rc  main.cpp
Core/: ArchiveManager.cpp  ArchiveManager.h  ArchiveWorker.cpp  ArchiveWorker.h
UI/: ArchiveContent.cpp  ArchiveContent.h  ArchiveInfo.cpp  ArchiveInfo.h  ButtonGroup.cpp  ButtonGroup.h  MainWindow.cpp  MainWindow.h  SizeItem.cpp  footer.cpp  footer.h
UI/ArchiveContent/: ArchiveContent.cpp  ArchiveContent.h
UI/ArchiveInfo/: ArchiveInfo.cpp
UI/ButtonGroup/: ButtonGroup.cpp  ButtonGroup.h
UI/Header/: Header.cpp
UI/SizeItem/: SizeItem.h
UnitTests/: ArchiveWorkerTest.cpp  ArchiveWorkerTest.h
minizip/: mz_zip_rw.c
